Fix spacing issue with about div

--- a/art.css
+++ b/art.css
@@ -90,16 +90,17 @@ button:last-child{
 	font-weight: 800;
 }
 #about center{
-	padding:60px 50px;
+	padding:30px 50px;
 }
 #circleDetails{
+	width:100%;
     display:inline-block; 
-    margin: 30px;
+    margin: 0px;
 }
 #circleDetails div{
 	display:flex-box;
 	float:left;
-	margin:20px;
+	width:33%;
 }
 #circleDetails img{
 	width:300px;
@@ -120,6 +121,9 @@ button:last-child{
 }
 #leftList li{
 	text-align: right;
+}
+#rightList{
+	padding-left:0px;
 }
 #rightList li {
 	text-align: left;
